[SSDK-1074] merge commonLib GA into sdk